# preambulate

./: .gitignore  .mcp.json  CLAUDE.md  COMMERCIAL-LICENSE  README.md  artifact.py  briefing.py  capture.py  decision.py  export.py  infer.py  init.py  pyproject.toml  schema.cypher  schema.spec.md  sync.py
.claude/: settings.json
.github/workflows/: python-package.yml
interface/: cluster.md  coordinator-architect.md  cross-file-resolution.md  env-auth.md  web-client.md
preambulate/: __init__.py  artifact.py  briefing.py  capture.py  cli.py  cluster.py  decision.py  doctor.py  export.py  graph.py  identity.py  infer.py  init.py  install.py  keystore.py  mcp_server.py  schema.cypher  sync.py  sync_state.py
