[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preambulate"
version = "0.1.0"
description = "Graph-based project memory for Claude Code — semantic density over transcript volume"
requires-python = ">=3.8"
dependencies = ["kuzu==0.4.2"]

[project.urls]
Homepage = "https://preambulate.dev"

[tool.setuptools.package-data]
preambulate = ["*.cypher"]

[project.scripts]
preambulate = "preambulate.cli:main"
